Add search parameter to chrome extension

--- a/cex/popup.html
+++ b/cex/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Test page</title>
     <style>
       body {
@@ -22,9 +23,9 @@
   </head>
   <body>
     <h3>tracker</h3>
-    <form id="add">
-        <input type="text" id="keyword" name="keyword" size="50" value="" />
-        <input id="search" type="submit" value="Search" />
+    <form id="target" action="popup.html">
+        <input type="text" id="keyword" value="input keyword" />
+        <input type="submit" value="Search" />
     </form>
     <ol id="result"></ol>
   </body>
